--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- code git hub link https://github.com/appu-46/Web-designing.git -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
