please push this code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- code git hub link https://github.com/appu-46/Web-designing.git -->
+<!-- code git hub link do this idiot https://github.com/appu-46/Web-designing.git -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
